<resources>
    <string name="app_name">MyTeamsPage</string>
    <string name="select_date">Select Date</string>
    <string name="select_team">Select Team</string>
    <string name="select_oponent">Select Opponent</string>
    <string name="select_location">Select Location</string>
    <string name="publication_header">Publication</string>
    <string name="select_country"> Select Country</string>
    <string name="my_teams"> My Teams</string>
    <string name="create_team"> Create Team</string>
    <string name="team_header"> Create a team, invite </string>
    <string name="team_subtitle1">  your friends and </string>
    <string name="team_subtitle2"> start playing! </string>
</resources>