<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.TeamsHomePage">


    <TextView
        android:id="@+id/Kickoff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="KICKOFF"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/my_teams"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:hint="@string/my_teams"
        android:textSize="17sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Kickoff" />

    <LinearLayout
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/my_teams"
        app:layout_constraintStart_toEndOf="@+id/my_teams">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_search_24" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/notification" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_margin="15dp"
        android:id="@+id/rvListTeamsCaptain"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:clipChildren="true"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/my_teams" />

    <TextView
        android:id="@+id/create_Team"
        android:layout_margin="15dp"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:hint="@string/create_team"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvListTeamsCaptain" />


    <TextView
        android:textAlignment="center"
        android:id="@+id/create_Team_text1"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/team_header"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_Team" />

    <TextView
        android:textAlignment="center"
        android:id="@+id/create_Team_text2"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/team_subtitle1"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_Team_text1" />

    <TextView
        android:textStyle="bold"
        android:textAlignment="center"
        android:id="@+id/create_Team_text3"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/team_subtitle2"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_Team_text2" />

    <Button
        android:id="@+id/create_Team_btn"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/create_team"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_Team_text3"
        android:textColor="@color/white"
        android:background="@drawable/button_border_get_started"/>



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_margin="20dp"
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/button_border_get_started"
        app:menu="@menu/bottom_nav">
    </com.google.android.material.bottomnavigation.BottomNavigationView>


</androidx.constraintlayout.widget.ConstraintLayout>